api: modify
